FIX removed max-height for cards section on mobile

--- a/src/pages/Home/components/ValuesSection/ValuesSection.css
+++ b/src/pages/Home/components/ValuesSection/ValuesSection.css
@@ -39,7 +39,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-height: 200vh;
+    max-height: auto;
     min-height: 725px;
     overflow-x: hidden;
     padding-top: 3rem;
